--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -17,23 +17,23 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <!-- Bootstrap Core CSS -->
-  <link href="./css/bootstrap.min.css" rel="stylesheet">
+  <link href="./css/bootstrap.min.css" rel="stylesheet" />
 
   <!-- MetisMenu CSS -->
-  <link href=./css/metisMenu.min.css" rel="stylesheet">
+  <link href="./css/metisMenu.min.css" rel="stylesheet" />
 
   <!-- Timeline CSS -->
-  <link href="./css/timeline.css" rel="stylesheet">
+  <link href="./css/timeline.css" rel="stylesheet"/>
 
   <!-- Custom CSS -->
-  <link href="./css/startmin.css" rel="stylesheet">
+  <link href="./css/startmin.css" rel="stylesheet"/>
 
   <!-- Morris Charts CSS -->
-  <link href="./css/morris.css" rel="stylesheet">
+  <link href="./css/morris.css" rel="stylesheet"/>
 
   <!-- Custom Fonts -->
-  <link href="./css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href="./css/style.css" rel="stylesheet" type="text/css">
+  <link href="./css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+  <link href="./css/style.css" rel="stylesheet" type="text/css"/>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
